# modern_cpp

./: .gitignore  LICENSE  README.md
c++11/: CMakeLists.txt  auto_decltype_for_range.h  chrono_test.h  constexpr_test.h  enum_class_test.h  explicit_final_override_delete_default.h  function_lambda.h  main.cpp  null_ptr.h  rvalue_perfect_forward.h  smart_pointer.h  varidic_template.h
c++14/: CMakeLists.txt  SharedTimeTest.h  constexpr_test.h  main.cpp  unique_ptr_test.h
c++17/: AnyTest.h  CMakeLists.txt  FileSystemTest.h  If_constexpr.h  Inline_varible.h  OptionalTest.h  VariantTest.h  Variant_Visit.h  fold_expr.h  if_switch_with_initstmt.h  main.cpp  string_view_test.h  structured_binding.h  test_inline_varible_other.cpp
